# radiogaga

./: .env.example  .gitignore  README.md  RadioGaGa Case.3dm  check.py  config.py  demo_dj.py  demo_opening_scene.py  demo_scene2_friends.py  demo_scene3_talkshow.py  demo_snippets.py  demo_woz.py  demo_woz_dailynews.py  demo_woz_multiagent.py  devpost.md  generate_talkshow_intro.py  log.py  main.py  requirements.txt  todo.md
radio-agent/: .env.example  initial-plan.md  pyproject.toml
radio-agent/.radioagent/audio/agent_a/: session_33b4e199bc884df2a1b520d443acf8e9_agent_a_1.txt  session_33b4e199bc884df2a1b520d443acf8e9_agent_a_3.txt
radio-agent/.radioagent/logs/: app.jsonl
radio-agent/radioagent/: __init__.py  config.py  models.py  preflight.py
radio-agent/radioagent/agents/: __init__.py  runtime.py
radio-agent/radioagent/audio/: __init__.py  player.py
radio-agent/radioagent/debate/: __init__.py  orchestrator.py
radio-agent/radioagent/interface/: __init__.py  cli_injector.py
radio-agent/radioagent/observability/: __init__.py  logging.py
radio-agent/radioagent/prompts/: __init__.py  agent_a.yaml  agent_b.yaml  loader.py
radio-agent/radioagent/transport/: __init__.py  ws_hub.py
radio-agent/radioagent/voice/: __init__.py  base.py  elevenlabs_provider.py  mock_provider.py
radio-agent/scripts/: run_local_debate.py
radio-agent/tests/: test_anthropic_live.py  test_audio_player.py  test_config.py  test_elevenlabs_provider.py  test_mock_tts.py  test_models.py  test_orchestrator.py  test_preflight.py  test_prompts.py  test_runtime.py  test_sdk_live.py
(+84 files in other folders)
